Server messages shown. Logout added.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body style="padding-bottom:10rem;">
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <script src="scripts/lib/bootstrap-dialog.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/JSXTransformer.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.min.js"></script>
         <script src="http://www.wavesurfer.fm/dist/wavesurfer.min.js"></script>
